all pnotify change to class='dark'

--- a/WebApp/Views/Alert/Index.cshtml
+++ b/WebApp/Views/Alert/Index.cshtml
@@ -56,7 +56,7 @@
 
                     if(result.ApiResultModel.message=="")
                     {
-                        new PNotify({ title: 'Success', text: "Alert is deleted successfully.", type: 'success', styling: 'bootstrap3' });
+                        new PNotify({ title: 'Success', text: "Alert is deleted successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         reloadConsultation(function ()
                         {
                             //Stop displaying loader
