--- a/WebApp/Views/Appointment/PartialPending.cshtml
+++ b/WebApp/Views/Appointment/PartialPending.cshtml
@@ -132,7 +132,7 @@ else
                     //stopLoader();
                 }
                 else {
-                    new PNotify({ title: 'Success', text: "Consultation is marked as completed successfully.", type: 'success', styling: 'bootstrap3' });
+                    new PNotify({ title: 'Success', text: "Consultation is marked as completed successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                     //alert('Consultation is marked as completed successfully.');
                     reloadContainer(function () {
 
@@ -183,7 +183,7 @@ else
                         //stopLoader();
                     }
                     else {
-                        new PNotify({ title: 'Success', text: "Consultation is marked as completed successfully.", type: 'success', styling: 'bootstrap3' });
+                        new PNotify({ title: 'Success', text: "Consultation is marked as completed successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         //alert('Consultation is marked as completed successfully.');
                         reloadContainer(function () {
 
