--- a/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
@@ -138,7 +138,7 @@ else
                     hideLoader();
                 }
                 else {
-                    new PNotify({ title: 'Success', text: "Consultation is completed successfully.", type: 'success', styling: 'bootstrap3' });
+                    new PNotify({ title: 'Success', text: "Consultation is completed successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                     //alert('Consultation is marked as completed successfully.');
                     reloadContainer(function () {
 
@@ -179,7 +179,7 @@ else
                 }
                 else {
                     //alert('Consultation is marked as completed successfully.');
-                    new PNotify({ title: 'Success', text: "Consultation is completed successfully.", type: 'success', styling: 'bootstrap3' });
+                    new PNotify({ title: 'Success', text: "Consultation is completed successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                     $('#myModal5').modal('hide');
                     reloadContainer(function () {
 
@@ -217,11 +217,11 @@ else
                     hideLoade();
                 }
                 else {
-                    new PNotify({ title: 'Success', text: "Reschedule Request has been sent to patient.", type: 'success', styling: 'bootstrap3' });
+                    new PNotify({ title: 'Success', text: "Reschedule Request has been sent to patient.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                     $('#myModal5').modal('hide');
                     reloadContainer(function () {
 
-                        // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
+                        // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         //Stop displaying loader
                         //stopLoader();
 
@@ -266,7 +266,7 @@ else
                     }
                     else {
                         //alert('Appointment is rescheduled successfully.');
-                        new PNotify({ title: 'Success', text: "Reschedule Request has been sent to patient.", type: 'success', styling: 'bootstrap3' });
+                        new PNotify({ title: 'Success', text: "Reschedule Request has been sent to patient.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         reloadContainer(function () {
 
                             
@@ -320,7 +320,7 @@ else
                     }
                     else {
                         
-                         new PNotify({ title: 'Success', text: "Consultation is completed successfully.", type: 'success', styling: 'bootstrap3' });
+                         new PNotify({ title: 'Success', text: "Consultation is completed successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         reloadContainer(function () {
 
                             
