--- a/WebApp/Views/DoctorAppointment/PartialDoctorReschedule.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorReschedule.cshtml
@@ -129,11 +129,11 @@ else
                 }
                 else {
                     //alert('Reschedule request is cancelled successfully.');
-                    new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
+                    new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                     $('#myModal5').modal('hide');
                     reloadContainer(function () {
                         
-                        // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
+                        // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         //Stop displaying loader
                         hideLoader();
 
@@ -176,10 +176,10 @@ else
                     }
                     else {
                         //alert('Reschedule request is cancelled successfully.');
-                        new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
+                        new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         reloadContainer(function () {
                             
-                            // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
+                            // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                             //Stop displaying loader
                             hideLoader();
                            
