--- a/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
@@ -215,11 +215,11 @@ else
                 }
                 else {
                     //alert('Appointment is rescheduled successfully.');
-                    new PNotify({ title: 'Success', text: "Reschedule Request has been sent to patient.", type: 'success', styling: 'bootstrap3' });
+                    new PNotify({ title: 'Success', text: "Reschedule Request has been sent to patient.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                     $('#myModal5').modal('hide');
                     reloadContainer(function () {
 
-                        // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
+                        // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         //Stop displaying loader
                         hideLoader();
 
@@ -262,10 +262,10 @@ else
                     }
                     else {
                         //alert('Appointment is rescheduled successfully.');
-                        new PNotify({ title: 'Success', text: "Reschedule Request has been sent to patient.", type: 'success', styling: 'bootstrap3' });
+                        new PNotify({ title: 'Success', text: "Reschedule Request has been sent to patient.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         reloadContainer(function () {
 
-                            // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
+                            // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                             //Stop displaying loader
                             //stopLoader();
                         });
