--- a/WebApp/Views/HealthCareTeam/Index.cshtml
+++ b/WebApp/Views/HealthCareTeam/Index.cshtml
@@ -64,7 +64,7 @@
                 new PNotify({
                     title: 'Success',
                     text: "@ViewBag.successMessage",
-                    type: 'success',
+                    type: 'info',addclass: 'dark',
                     styling: 'bootstrap3'
                 });
             });
