--- a/WebApp/Views/HealthCareTeam/PartialViewSurgery.cshtml
+++ b/WebApp/Views/HealthCareTeam/PartialViewSurgery.cshtml
@@ -150,7 +150,7 @@
                             else
                             {
                                 //reloadContainer(function () {
-                                new PNotify({ title: 'Success', text: "Surgery is deleted successfully.", type: 'success', styling: 'bootstrap3' });
+                                new PNotify({ title: 'Success', text: "Surgery is deleted successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                                 //Stop displaying loader
                                 hideLoader();
                                 //});
@@ -195,7 +195,7 @@
                     else
                     {
                         //reloadContainer(function () {
-                        new PNotify({ title: 'Success', text: "Surgery is added successfully.", type: 'success', styling: 'bootstrap3' });
+                        new PNotify({ title: 'Success', text: "Surgery is added successfully.", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         reloadSurgeries(function () {
                             //Stop displaying loader
                           
