--- a/WebApp/Views/Patient/SeeDoctor.cshtml
+++ b/WebApp/Views/Patient/SeeDoctor.cshtml
@@ -17,7 +17,7 @@
             new PNotify({
                 title: 'Success',
                 text: "@ViewBag.successMessage",
-                type: 'success',
+                type: 'info',addclass: 'dark',
                 styling: 'bootstrap3'
             });
         });
