--- a/WebApp/Views/PatientProfile/Index.cshtml
+++ b/WebApp/Views/PatientProfile/Index.cshtml
@@ -503,7 +503,7 @@
 
                     $.post(cUrl, $("#frmProfile").serialize(), function (oResp) {
                         if (oResp == "") {
-                            new PNotify({ title: 'Success', text: "Profile data saved successfully!", type: 'success', styling: 'bootstrap3' });
+                            new PNotify({ title: 'Success', text: "Profile data saved successfully!", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         }
                         else {
                             new PNotify({ title: 'Error', text: oResp, type: 'error', styling: 'bootstrap3' });
@@ -567,7 +567,7 @@
                     var cUrl = "@Url.Action("SaveSecretAnswers", "PatientProfile")";
                     $.post(cUrl, $("#frmSecretAnswer").serialize(), function (oResp) {
                         if (oResp == "") {
-                            new PNotify({ title: 'Success', text: "Answers saved successfully!", type: 'success', styling: 'bootstrap3' });
+                            new PNotify({ title: 'Success', text: "Answers saved successfully!", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         }
                         else {
                             new PNotify({ title: 'Error', text: oResp, type: 'error', styling: 'bootstrap3' });
@@ -633,7 +633,7 @@
                     var cUrl = "@Url.Action("ChangePassword", "PatientProfile")?newPassword=" + $("#pwd").val();
                     $.post(cUrl, function (oResp) {
                         if (oResp == "") {
-                            new PNotify({ title: 'Success', text: "Password changed successfully!", type: 'success', styling: 'bootstrap3' });
+                            new PNotify({ title: 'Success', text: "Password changed successfully!", type: 'info',addclass: 'dark', styling: 'bootstrap3' });
                         }
                         else {
                             new PNotify({ title: 'Error', text: oResp, type: 'error', styling: 'bootstrap3' });
