--- a/WebApp/Views/Patient_Admin/Create.cshtml
+++ b/WebApp/Views/Patient_Admin/Create.cshtml
@@ -26,7 +26,7 @@
             new PNotify({
                 title: 'Success',
                 text: "@ViewBag.successMessage",
-                type: 'success',
+                type: 'info',addclass: 'dark',
                 styling: 'bootstrap3'
             });
         });
