--- a/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
+++ b/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
@@ -86,7 +86,7 @@ else
                         new PNotify({
                             title: 'Success',
                             text: "Doctor is made favourite successfully.",
-                            type: 'success',
+                            type: 'info',addclass: 'dark',
                             styling: 'bootstrap3'
                         });
                         reloadContainer(function () {
@@ -131,7 +131,7 @@ else
                         new PNotify({
                             title: 'Success',
                             text: "Doctor is made unfavourite successfully.",
-                            type: 'success',
+                            type: 'info',addclass: 'dark',
                             styling: 'bootstrap3'
                         });
                         reloadContainer(function () {
