Fixes after merge from master

--- a/WebApp/Views/DoctorConsultation/PartialViewDoctorConsultation.cshtml
+++ b/WebApp/Views/DoctorConsultation/PartialViewDoctorConsultation.cshtml
@@ -74,9 +74,9 @@ else
                         }
                         <td style="text-align:center;width:20%">@item.rov</td>
 
-                        <td style="text-align:center;width:10%">
+                        <td style="text-align:center;width:20%">
                             <button data-toggle="modal" data-id="@item.consultID" id="@item.consultID" data-target="#myModal4"
-                                    class="btn btn-primary btn-sm m-b-0 " type="button" onclick=showConsult(@item.consultID);>
+                                    class="btn btn-primary" type="button" onclick=showConsult(@item.consultID);>
                                 View Detail
                             </button>
 
