--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -440,7 +440,7 @@
                 availablePatients.patient = [];
 
                 for (var i = 0; i < message.length; i++) {
-                    availableDoctors.patient.push({
+                    availablePatients.patient.push({
                         connectionId: message[i].Key,
                         firstName: message[i].Value.FirstName,
                         lastName: message[i].Value.LastName,
