whatnew icon changes, and include mising nicons

--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -147,8 +147,8 @@
                                         <a href="@Url.Action("Index", "Messages")"><img src="~/Content/images/icon_messages.png" alt=""> &nbsp <span class="menu-txt">Messages</span> </a>
                                     </li>*@
 
-                                <li class="call_history">
-                                    <a href="@Url.Action("Index","News")"><img src="~/Content/images/icon_call-history.png" alt="">  &nbsp <span class="menu-txt">Whats New</span> </a>
+                                <li class="whats_news">
+                                    <a href="@Url.Action("Index","News")"><img src="~/Content/images/whats-new.png" alt="">  &nbsp <span class="menu-txt">Whats New</span> </a>
                                 </li>
                             </ul>
                         </div>
