--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -121,8 +121,8 @@
                                 <li class="doctor">
                                     <a href="@Url.Action("SeeDoctor", "SeeDoctor")"><img src="~/Content/images/icon_doc_search.png" alt="">  &nbsp <span class="menu-txt">See a doctor</span> </a>
                                 </li>
-                                <li class="doctor">
-                                    <a href="@Url.Action("Index", "HealthCareTeam")"><img src="~/Content/images/icon_doc_search.png" alt="">  &nbsp <span class="menu-txt">Health Care Team</span> </a>
+                                <li class="call_history">
+                                    <a href="@Url.Action("Index", "HealthCareTeam")"><img src="~/Content/images/my-doctors1.png" alt="">  &nbsp <span class="menu-txt">My Care Team</span> </a>
                                 </li>
                                 <li class="appointment">
                                     <a href="@Url.Action("Index","Consultation")"><img src="~/Content/images/history.png" alt=""> &nbsp <span class="menu-txt"> Consult History</span></a>
@@ -140,7 +140,7 @@
                                             <li><a href="#">Dashboard</a></li>
                                         </ul>
                                     </li>*@
-                                <li class="call_history">
+                                <li class="whats_news">
                                     <a href="@Url.Action("Index","News")"><img src="~/Content/images/whats-new.png" alt="">  &nbsp <span class="menu-txt">Whats New</span> </a>
                                 </li>
 
