--- a/WebApp/Content/css/green.css
+++ b/WebApp/Content/css/green.css
@@ -9,7 +9,7 @@
     padding: 0;
     width: 20px;
     height: 20px;
-    background: url(../images/green.png) no-repeat;
+    background: url(./images/green.png) no-repeat;
     border: none;
     cursor: pointer;
 }
