--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -16,7 +16,7 @@
     <link href="@Url.Content("~/Content/css/font-awesome.min.css")" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="@Url.Content("~/Content/css/green.css")" rel="stylesheet">
+    @*<link href="@Url.Content("~/Content/css/green.css")" rel="stylesheet">*@
     <link href="@Url.Content("~/Content/css/custom.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/css/style.css")" rel="stylesheet">
     @Styles.Render("~/Content/NewCss")
